<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="imageview">imageview</string>
    <string name="oferta_del_dia">Oferta del dia</string>
    <string name="refactoring_life_nacademy">Refactoring Life\nAcademy</string>
    <string name="register">Register</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="en_caso_de_tener_problemas_comunicarse_con_soporte">En caso de tener problemas comunicarse con soporte</string>
    <string name="si_no_tienes_una_cuenta">Si no tienes una cuenta ,</string>
    <string name="registrate_aqui">registrate aqui</string>
    <string name="entrar">Entrar</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="mostrar_contrase_a">Mostrar contraseña</string>
    <string name="error_en_el_usuario_o_contrase_a">Error en el usuario o contraseña!</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="si_ya_tienes_una_cuenta">Si ya tienes una cuenta,</string>
    <string name="inicia_sesion_aqui">inicia sesion aqui</string>
    <string name="error_en_el_mensaje_o_contrase_a">Error en el mensaje o contraseña!</string>
    <string name="en_caso_de_problemas_comunicarse_con">En caso de Problemas comunicarse con</string>
    <string name="soporte">soporte</string>
</resources>