<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.preLogin.presenter.PreLoginActivity">


    <ImageView
        android:id="@+id/iv_logo_rla"
        android:layout_width="200dp"
        android:contentDescription="@string/imageview"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_rla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/refactoring_life_nacademy"
        android:textColor="@color/text_title_rla"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_rla" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_login"
        android:layout_width="284dp"
        android:layout_height="43dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/btn_login"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_rla">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/iniciar_sesi_n"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_register"
        android:layout_width="284dp"
        android:layout_height="43dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/btn_login"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/en_caso_de_tener_problemas_comunicarse_con_soporte"/>



</androidx.constraintlayout.widget.ConstraintLayout>