<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.register.presenter.RegisterActivity">

    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_semi_bold"
        android:text="@string/registrarse"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="284dp"
        android:layout_height="54dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/edittext_border"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_register">

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="9dp"
            android:contentDescription="@string/imageview"
            android:src="@drawable/ic_email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="0dp"
            android:textColor="@color/et_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="284dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_border"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_email">

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="9dp"
            android:contentDescription="@string/imageview"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:autofillHints="passwordAddress"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColor="@color/et_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:fontFamily="@font/roboto_semi_bold"
        android:text="@string/mostrar_contrase_a"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_password" />

    <LinearLayout
        android:id="@+id/ll_confirm_password"
        android:layout_width="284dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_border"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_password">

        <ImageView
            android:id="@+id/iv_confirm_password"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="9dp"
            android:contentDescription="@string/imageview"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:autofillHints="passwordAddress"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            android:textColor="@color/et_hint"
            android:textSize="16sp" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkbox_confir_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:fontFamily="@font/roboto_semi_bold"
        android:text="@string/mostrar_contrase_a"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_confirm_password" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Enter_error"
        android:layout_width="284dp"
        android:layout_height="43dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/btn_error_register"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/title_support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btn_Enter_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/entrar"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Enter"
        android:layout_width="284dp"
        android:layout_height="43dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/btn_login"
        android:visibility="visible"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/title_support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btn_Enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/entrar"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="65dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si_ya_tienes_una_cuenta"/>

    <TextView
        android:id="@+id/title_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sesion_aqui"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="65dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>