<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ui.home.presenter.HomeActivity">

    <LinearLayout
        android:id="@+id/custom"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/custom_color"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imageview"
        android:src="@drawable/ic_icon_rla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_searchview"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_home"
            android:iconifiedByDefault="false"
            app:queryHint="Buscar..."
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/imageview"
        android:src="@drawable/ic_heart_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_items"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_searchview"
        tools:listitem="@layout/item_rv_home_text_product" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_products"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        tools:listitem="@layout/item_rv_home_products"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_items" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom">

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_semi_bold"
            android:text="@string/oferta_del_dia"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/imageview"
            android:src="@drawable/ic_heart_2" />

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="213dp"
            android:layout_height="222dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/imageview"
            android:scaleType="centerCrop"
            android:src="@drawable/img_example_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="90dp"
            android:fontFamily="@font/roboto_semi_bold"
            android:textSize="14sp"
            tools:text="Rusty" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="50dp"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_light"
            tools:text="Buzo canguro capucha con\ncordon" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            tools:text="$ 52.000" />


    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/en_caso_de_problemas_comunicarse_con"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_direct_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_semi_bold"
        android:text="@string/soporte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>